finishing the different restos

--- a/About-us/about.html
+++ b/About-us/about.html
@@ -34,10 +34,10 @@
             <a class="navbar-link" href="/index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 Home
             </a>
-            <a class="navbar-link" href="/website folder (IT37)/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+            <a class="navbar-link" href="/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 About
             </a>
-            <a class="navbar-link" href="/website folder (IT37)/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
+            <a class="navbar-link" href="/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
                 Contact Us
             </a>
 
@@ -75,7 +75,7 @@
     <div class="about-me">
         <img src="../pics/logo foodings.png" alt="Your Name">
         <div class="info">
-            <h1>About Me</h1>
+            <h1 style="margin-bottom: 2rem;">About </h1>
             <p>Welcome to FOODINGS! We are a vibrant online community dedicated to celebrating food from around Manolo Fortich. Our mission is to connect food lovers through shared recipes and culinary stories.</p>
 
             <p>At FOODINGS, you’ll find a diverse collection of easy-to-follow recipes that cater to all tastes and dietary needs. You'll also find restaurant recomendations and ratings as our team is going to review all restaurants here at Manolo Fortich.</p>
@@ -85,12 +85,8 @@
     </div>
     <div class="about-me">
         <div class="info">
-            <h1>Additional Information</h1>
-            <p>In this space, I am always sharing fresh, flavorful, (mostly) healthy recipes that I love to make and eat in my real, actual, every day life. If I wouldn’t eat it in real life, I won’t put in on the blog. My goal is to inspire you with food that is both approachable AND exciting, whether you’re cooking for yourself, your family, your roommates, or your friends. I want you to be so excited about these recipes that you eagerly await 5pm when you can go home from work and start cooking.</p>
-
-            <p>On a related note, I absolutely LOVE seeing the food that you’re making. It will make my day if you tag @Foodings in your Instagram photos and stories! We love to shout out our favorites on Fridays with our Reader Awards on Instagram Stories.</p>
-            
-            <p>Join us as we explore the joy of food together. Welcome to FOODINGS—where every meal tells a story!</p>
+            <h1 style="margin-bottom: 2rem;">Additional Information</h1>
+<p>At Foodings, we feature a variety of fresh, flavorful, and (mostly) healthy recipes that are perfect for everyday life. The meals shared here are ones I truly love to make and eat, with a focus on dishes that are both approachable and exciting. Whether you're cooking for yourself, family, or friends, our goal is to inspire you with recipes that make meal prep something you look forward to. We also love seeing your culinary creations, so tag @Foodings on Instagram for a chance to be featured! Welcome to a space where food is an adventure and every meal tells a story.</p>
         </div>
     </div>
 
