--- a/FSB.html
+++ b/FSB.html
@@ -131,9 +131,10 @@
 <h1 class="header1">LOCATION: </h1>
 
 
+
 <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3947.5618464096146!2d124.81131187478547!3d8.34625689169031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32ff954385fa01fd%3A0x8b3ce74a30b86eb5!2sFrontyard%20Snack%20Bar!5e0!3m2!1sen!2sph!4v1731500956841!5m2!1sen!2sph" width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
-
+</div>
 
 
 
