--- a/LLC.html
+++ b/LLC.html
@@ -130,9 +130,10 @@
 <h1 class="header1">LOCATION: </h1>
 
 
+
 <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.807214867867!2d124.81868069999997!3d8.420585599999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32ff95f27a2c7f11%3A0x9fb4623f1b1cc5fd!2sLamp%20Lighter%20Cafe!5e0!3m2!1sen!2sph!4v1731501711244!5m2!1sen!2sph" width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+</div>
 
 
 
