--- a/MR.html
+++ b/MR.html
@@ -47,11 +47,6 @@
 
 
 
-<form class="d-flex mt-3" role="search" style="width: 25%; margin-left: 40%; margin-bottom: 20px;">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-success" type="submit">Search</button>
-</form>
-
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel" style="background-color: white;">
     <div class="offcanvas-header">
@@ -76,9 +71,68 @@
     </div>
 </div>
 
+<div class="store">
+    <img src="pics/r1.jpg" alt="Your Name"  style="width: 100%; width: 100%;">
+
+    <div class="info">
+        <h1 class="header">Matthew's Resto Bar
+        </h1>
+        <div class="text" style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; margin-left: 6rem; margin-right: 6rem">
+        <p >
+            
+            Matthew’s Restobar in Bukidnon offers a vibrant dining and social experience that draws in locals and visitors alike. Known for its relaxed, welcoming vibe, Matthew’s is the perfect place to unwind, whether for a casual night out, a dinner with friends, or a solo meal. Situated in an easily accessible location, the restobar is a favored destination in the area, blending great food, refreshing drinks, and a friendly, upbeat atmosphere.            
+            </p>
+            <p>The ambiance of Matthew’s Restobar is inviting, designed to cater to a variety of occasions. Its combination of cozy indoor seating and a well-organized outdoor area makes it an excellent choice for people looking for a lively setting without sacrificing comfort. The lighting and layout foster a sociable environment that encourages guests to settle in and enjoy the evening, making it a top spot for everything from friendly meetups to celebratory gatherings.
+              </p>
+              <p>  Matthew’s Restobar takes pride in its diverse menu, which caters to a wide range of tastes. The offerings include both Filipino and international dishes, ensuring there’s something to please every palate. Known for its flavorful and well-prepared meals, the menu often includes classic bar fare alongside unique local specialties, allowing diners to enjoy both comfort foods and local flavors. For example, guests might start with appetizers like nachos or calamari before moving on to main dishes featuring grilled meats, seafood, and hearty pasta plates.</p>
+              <p>Whether you're looking for a spot to celebrate, relax, or simply enjoy a satisfying meal, Matthew’s Restobar in Bukidnon is a top choice for those seeking quality food, a diverse drink selection, and an engaging social atmosphere. The restobar’s blend of local charm and international flair makes it a unique destination, offering a memorable experience for all who visit.</p>
+            </div>
+            </div>
+</div>
 
 
-    
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold;">"Food"</div>
+
+<h1 class="header1">MENU: </h1>
+
+<div class="card-container">
+<div class="card" style="width: 18rem;">
+    <img src="matthew/1.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="matthew/2.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="matthew/3.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="matthew/4.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="matthew/5.jpg" class="card-img-top" alt="...">
+   
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="matthew/6.jpg" class="card-img-top" alt="...">
+  </div>
+</div>
+
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold; ">"Findings"</div>
+
+<h1 class="header1">LOCATION: </h1>
+
+
+
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3947.2761073867123!2d124.8442649747857!3d8.374478291663047!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32ff9609f0fa1293%3A0xbb572fd42e81edf5!2sMatthew&#39;s%20Restobar!5e0!3m2!1sen!2sph!4v1731502518520!5m2!1sen!2sph" width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 
 
@@ -111,25 +165,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <footer class="text-center mt-5">
+<footer class="text-center mt-5">
     <div class="container">
         <div class="footer-links">
             <a href="https://www.facebook.com/profile.php?id=61566297068385" class="footer-link">
@@ -150,6 +186,6 @@
         </div>
         <p>&copy; 2024 FOODINGS. All rights reserved.</p>
     </div>
-</footer> -->
+</footer>
 </body>
 </html>
