--- a/RRJ.html
+++ b/RRJ.html
@@ -47,11 +47,6 @@
 
 
 
-<form class="d-flex mt-3" role="search" style="width: 25%; margin-left: 40%; margin-bottom: 20px;">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-success" type="submit">Search</button>
-</form>
-
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel" style="background-color: white;">
     <div class="offcanvas-header">
@@ -76,9 +71,69 @@
     </div>
 </div>
 
+<div class="store">
+    <img src="pics/r5.jpg" alt="Your Name" style="width: 100%; width: 100%;" >
+
+    <div class="info">
+        <h1 class="header">RRJ FOOD HAUS
+        </h1>
+        <div class="text" style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; margin-left: 6rem; margin-right: 6rem">
+        <p >
+            
+            RRJ's Food Haus is a popular local dining spot known for offering a delicious array of meals that cater to various tastes. With its cozy and casual setting, it’s an ideal place for both quick bites and relaxed dining experiences. The menu at RRJ's Food Haus features a mix of Filipino and international dishes, all prepared using fresh ingredients to ensure quality and flavor. Whether you're in the mood for traditional Filipino favorites or more contemporary meals, RRJ's has something for everyone.            
+            </p>
+            <p>The ambiance of RRJ's Food Haus is friendly and family-oriented, making it a great place for gathering with loved ones. The restaurant provides a comfortable environment that allows guests to enjoy their meals in a laid-back atmosphere. Whether it's a casual dinner or a celebration, the staff ensures great service, making customers feel at home throughout their dining experience.
 
 
-    
+              </p>
+              <p> In addition to the food, RRJ's Food Haus offers a variety of beverages, including refreshing drinks that complement their hearty meals. The restaurant’s combination of flavorful food and welcoming service makes it a local favorite, attracting both regulars and newcomers to its doors.</p>
+              <p>Perfect for family meals, group outings, or even solo dining, RRJ's Food Haus provides a satisfying experience with great food, an inviting atmosphere, and exceptional service, making it a must-visit spot in the area.</p>
+            </div>
+            </div>
+</div>
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold;">"Food"</div>
+
+<h1 class="header1">MENU: </h1>
+
+<div class="card-container">
+<div class="card" style="width: 18rem;">
+    <img src="rrj/1.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="rrj/2.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="rrj/3.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="rrj/4.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="rrj/5.jpg" class="card-img-top" alt="...">
+   
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="rrj/6.jpg" class="card-img-top" alt="...">
+  </div>
+</div>
+
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold; ">"Findings"</div>
+
+<h1 class="header1">LOCATION: </h1>
+
+
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3946.824663849172!2d124.81014267478635!3d8.418874291620073!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32ff94fc1ace291f%3A0xc33d84fb8c9ddd50!2sRRJ&#39;S%20FOOD%20HAUS!5e0!3m2!1sen!2sph!4v1731504120765!5m2!1sen!2sph" width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+</div>
 
 
 
@@ -111,25 +166,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <footer class="text-center mt-5">
+<footer class="text-center mt-5">
     <div class="container">
         <div class="footer-links">
             <a href="https://www.facebook.com/profile.php?id=61566297068385" class="footer-link">
@@ -150,6 +187,6 @@
         </div>
         <p>&copy; 2024 FOODINGS. All rights reserved.</p>
     </div>
-</footer> -->
+</footer>
 </body>
 </html>
