--- a/SH.html
+++ b/SH.html
@@ -47,11 +47,6 @@
 
 
 
-<form class="d-flex mt-3" role="search" style="width: 25%; margin-left: 40%; margin-bottom: 20px;">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-success" type="submit">Search</button>
-</form>
-
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel" style="background-color: white;">
     <div class="offcanvas-header">
@@ -76,9 +71,68 @@
     </div>
 </div>
 
+<div class="store">
+    <img src="pics/r9.jpg" alt="Your Name"  >
+
+    <div class="info">
+        <h1 class="header">STONE HOUSE STATION
+        </h1>
+        <div class="text" style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; margin-left: 6rem; margin-right: 6rem">
+        <p >
+            
+            Stone House Station is a charming dining destination known for its inviting atmosphere and diverse menu offerings. Located in Bukidnon, this spot is perfect for those looking to enjoy a meal in a relaxing, rustic setting. The unique blend of stone architecture and natural surroundings creates a warm and cozy ambiance, making it a great place for casual meals with friends or family.            </p>
+            <p>The menu at Stone House Station features a variety of dishes, from local Filipino cuisine to international favorites. With an emphasis on fresh, quality ingredients, the restaurant offers satisfying meals that cater to different tastes. Whether you're craving hearty meat dishes, flavorful seafood, or vegetarian options, Stone House Station has something for everyone.
 
 
-    
+              </p>
+              <p> Beyond the food, the atmosphere at Stone House Station makes it a memorable experience. The peaceful surroundings and rustic decor provide a perfect backdrop for enjoying your meal. It’s an ideal spot for gatherings, celebrations, or simply a peaceful retreat from the hustle and bustle.</p>
+              <p>Stone House Station stands out as a local favorite for its great food, unique setting, and excellent service. Whether you're a local resident or a visitor, it’s a place worth checking out for a memorable dining experience.</p>
+            </div>
+            </div>
+</div>
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold;">"Food"</div>
+
+<h1 class="header1">MENU: </h1>
+
+<div class="card-container">
+<div class="card" style="width: 18rem;">
+    <img src="stonehouse/1.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="stonehouse/2.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="stonehouse/3.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="stonehouse/4.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="stonehouse/5.jpg" class="card-img-top" alt="...">
+   
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="stonehouse/6.jpg" class="card-img-top" alt="...">
+  </div>
+</div>
+
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold; ">"Findings"</div>
+
+<h1 class="header1">LOCATION: </h1>
+
+
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3948.51636604647!2d124.84931067478438!3d8.251287691782215!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32ff999fcc366bb9%3A0xc485b3ea4a1d63e8!2sStone%20House%20Station!5e0!3m2!1sen!2sph!4v1731504722841!5m2!1sen!2sph" width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+</div>
 
 
 
@@ -110,26 +164,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <footer class="text-center mt-5">
+<footer class="text-center mt-5">
     <div class="container">
         <div class="footer-links">
             <a href="https://www.facebook.com/profile.php?id=61566297068385" class="footer-link">
@@ -150,6 +185,6 @@
         </div>
         <p>&copy; 2024 FOODINGS. All rights reserved.</p>
     </div>
-</footer> -->
+</footer>
 </body>
 </html>
