--- a/SJ.html
+++ b/SJ.html
@@ -47,11 +47,6 @@
 
 
 
-<form class="d-flex mt-3" role="search" style="width: 25%; margin-left: 40%; margin-bottom: 20px;">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-success" type="submit">Search</button>
-</form>
-
 
 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel" style="background-color: white;">
     <div class="offcanvas-header">
@@ -76,9 +71,74 @@
     </div>
 </div>
 
+<div class="store">
+    <img src="pics/r4.png" alt="Your Name"  >
+
+    <div class="info">
+        <h1 class="header">SJ DINNER
+        </h1>
+        <div class="text" style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; margin-left: 6rem; margin-right: 6rem">
+        <p >
+            
+            SJ Diner is a beloved casual dining spot known for its warm and inviting atmosphere, perfect for friends and family looking to enjoy hearty meals in a laid-back setting. Situated in the heart of Bukidnon, SJ Diner offers a variety of classic dishes that cater to different tastes. From comforting Filipino favorites to tasty international options, there’s something for everyone on the menu.            <p>The menu at Stone House Station features a variety of dishes, from local Filipino cuisine to international favorites. With an emphasis on fresh, quality ingredients, the restaurant offers satisfying meals that cater to different tastes. Whether you're craving hearty meat dishes, flavorful seafood, or vegetarian options, Stone House Station has something for everyone.
 
 
-    
+              </p>
+              <p> 
+                The restaurant is recognized for its friendly service and delicious food made with fresh, quality ingredients. Whether you’re in the mood for a filling breakfast, satisfying lunch, or casual dinner, SJ Diner ensures every meal is a delightful experience. The relaxed environment makes it ideal for both intimate meals and group gatherings, making it a popular choice for locals and visitors alike.
+              </p>
+              <p>
+                In addition to the great food, SJ Diner offers a cozy space with both indoor and outdoor seating, allowing guests to enjoy their meals while soaking in the comfortable ambiance. It's the perfect place to unwind, whether you're stopping by for a quick bite or enjoying a longer, leisurely meal.
+              </p>
+              <p>
+                Perfect for everyday dining, celebrations, or casual outings, SJ Diner continues to be a go-to place in Bukidnon for anyone looking to enjoy great food in a welcoming environment.
+              </p>
+            </div>
+            </div>
+</div>
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold;">"Food"</div>
+
+<h1 class="header1">MENU: </h1>
+
+<div class="card-container">
+<div class="card" style="width: 18rem;">
+    <img src="sj/1.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="sj/2.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="sj/3.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="sj/4.jpg" class="card-img-top" alt="...">
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="sj/5.jpg" class="card-img-top" alt="...">
+   
+  </div>
+  
+<div class="card" style="width: 18rem;">
+    <img src="sj/6.jpg" class="card-img-top" alt="...">
+  </div>
+</div>
+
+
+
+<div class="space" style="font-family: 'Dancing Script', cursive; font-size: 5rem; font-weight: bold; ">"Findings"</div>
+
+<h1 class="header1">LOCATION: </h1>
+
+
+<div class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3948.717093639331!2d124.84348977478416!3d8.231177991801703!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32ff99e2996bc5a7%3A0x29c80f7157268d7a!2sSJ%20Diner!5e0!3m2!1sen!2sph!4v1731505122890!5m2!1sen!2sph" width="800" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
 
 
 
@@ -109,27 +169,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- <footer class="text-center mt-5">
+<footer class="text-center mt-5">
     <div class="container">
         <div class="footer-links">
             <a href="https://www.facebook.com/profile.php?id=61566297068385" class="footer-link">
@@ -150,6 +190,6 @@
         </div>
         <p>&copy; 2024 FOODINGS. All rights reserved.</p>
     </div>
-</footer> -->
+</footer>
 </body>
 </html>
