--- a/index.html
+++ b/index.html
@@ -102,11 +102,11 @@
 <div class="container icon-row">
     <div class="icon-item">
         <img src="pics/r1.jpg" alt="Icon 1">
-        <a href="" class="icon-link"><p class="icon-name">Matthew's Restobar</p></a>
+        <a href="MR.html" class="icon-link"><p class="icon-name">Matthew's Restobar</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r9.jpg" alt="Icon 2">
-        <a href="link_to_pinutos_sa_kanto_page" class="icon-link"><p class="icon-name">Stone House</p></a>
+        <a href="SH.html" class="icon-link"><p class="icon-name">Stone House</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r2.jpg" alt="Icon 3">
@@ -114,19 +114,19 @@
     </div>
     <div class="icon-item">
         <img src="pics/r5.jpg" alt="Icon 4">
-        <a href="link_to_fjk_foodhouse_page" class="icon-link"><p class="icon-name">RRJ FOOD HAUS</p></a>
+        <a href="RRJ.html" class="icon-link"><p class="icon-name">RRJ FOOD HAUS</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r4.png" alt="Icon 5">
-        <a href="link_to_sj_dinner_page" class="icon-link"><p class="icon-name">SJ DINNER</p></a>
+        <a href="SJ.html" class="icon-link"><p class="icon-name">SJ DINNER</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r6.jpg" alt="Icon 6">
-        <a href="link_to_pizza_kid_page" class="icon-link"><p class="icon-name">PIZZA KID</p></a>
+        <a href="PK.html" class="icon-link"><p class="icon-name">PIZZA KID</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r7.jpg" alt="Icon 7">
-        <a href="link_to_lamp_lighter_cafe_page" class="icon-link"><p class="icon-name">Lamp Lighter Café</p></a>
+        <a href="LLC.html" class="icon-link"><p class="icon-name">Lamp Lighter Café</p></a>
     </div>
     <div class="icon-item">
         <img src="pics/r8.jpg" alt="Icon 8">
