--- a/MR.html
+++ b/MR.html
@@ -26,18 +26,16 @@
 <nav class="navbar fixed-top">
     <div class="container-fluid d-flex align-items-center">
        
-        <a class="navbar-brand" style="color: white; font-weight: bold; font-family: 'Dancing Script', cursive; font-size: xxx-large; letter-spacing: 2px; padding-right: 40px; padding-left: 40px;">
-            Foodings       
-        </a>
-        <a class="navbar-link" href="index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
-            Home
-        </a>
-        <a class="navbar-link" href="/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
-            About
-        </a>
-        <a class="navbar-link" href="/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
-            Contact Us
-        </a>
+    </a>
+    <a class="navbar-link" href="/index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+        Home
+    </a>
+    <a class="navbar-link" href="./About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+        About
+    </a>
+    <a class="navbar-link" href="./Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
+        Contact Us
+    </a>
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
             aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
