--- a/Contact-us/Contactus.html
+++ b/Contact-us/Contactus.html
@@ -31,13 +31,13 @@
             </a>
 
             
-            <a class="navbar-link" href="/index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+            <a class="navbar-link" href="../index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 Home
             </a>
-            <a class="navbar-link" href="/About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+            <a class="navbar-link" href="../About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 About
             </a>
-            <a class="navbar-link" href="/Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
+            <a class="navbar-link" href="../Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
                 Contact Us
             </a>
 
@@ -60,9 +60,6 @@
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
                     <a class="nav-link" href="index.html" style="color: black;">Restaurants</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="Contact.html" style="color: black;">Foods</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="About.html" style="color: black;">Location</a>
