--- a/Contact-us/Contactus.html
+++ b/Contact-us/Contactus.html
@@ -59,11 +59,7 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html" style="color: black;">Restaurants</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="About.html" style="color: black;">Location</a>
-                    
+                    <a class="nav-link" href="../members.html" style="color: black;">Members</a>
                 </li>
             </ul>
            
