--- a/members.html
+++ b/members.html
@@ -38,11 +38,14 @@
 
 .description {
     font-size: 16px;
-    color: #eceaea;
+    color: #ffffff;
 }
 .title {
     text-align: center;
-    color:#ccc;
+    color:#ffffff;
+    font-family:'Times New Roman', Times, serif;
+    font-weight: bold;
+   
 }
 
     </style>
