--- a/SJ.html
+++ b/SJ.html
@@ -12,7 +12,8 @@
 <link rel="stylesheet" href="stores.css">
 <style>
     .navbar-toggler {
-        border: none; 
+        border: none;
+         
     }
 
     .navbar-toggler-icon {
@@ -74,7 +75,8 @@
         <div class="text" style="font-family: Arial, Helvetica, sans-serif; font-size: 20px; margin-left: 6rem; margin-right: 6rem">
         <p >
             
-            SJ Diner is a beloved casual dining spot known for its warm and inviting atmosphere, perfect for friends and family looking to enjoy hearty meals in a laid-back setting. Situated in the heart of Bukidnon, SJ Diner offers a variety of classic dishes that cater to different tastes. From comforting Filipino favorites to tasty international options, there’s something for everyone on the menu.            <p>The menu at Stone House Station features a variety of dishes, from local Filipino cuisine to international favorites. With an emphasis on fresh, quality ingredients, the restaurant offers satisfying meals that cater to different tastes. Whether you're craving hearty meat dishes, flavorful seafood, or vegetarian options, Stone House Station has something for everyone.
+            SJ Diner is a beloved casual dining spot known for its warm and inviting 
+            atmosphere, perfect for friends and family looking to enjoy hearty meals in a laid-back setting. Situated in the heart of Bukidnon, SJ Diner offers a variety of classic dishes that cater to different tastes. From comforting Filipino favorites to tasty international options, there’s something for everyone on the menu.            <p>The menu at Stone House Station features a variety of dishes, from local Filipino cuisine to international favorites. With an emphasis on fresh, quality ingredients, the restaurant offers satisfying meals that cater to different tastes. Whether you're craving hearty meat dishes, flavorful seafood, or vegetarian options, Stone House Station has something for everyone.
 
 
               </p>
