--- a/members.html
+++ b/members.html
@@ -88,7 +88,7 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="./members.html" style="color: black;">Members</a>
+                    <a class="nav-link" href="./members.html" style="color: black;">"Members"</a>
                 </li>
             </ul>
            
