--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
             <a class="navbar-link" href="./index.html" style="color: white;  text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 Home
             </a>
-            <a class="navbar-link" href="../About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
+            <a class="navbar-link" href="About-us/about.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; margin-right: 30px; padding-left: 20px;">
                 About
             </a>
-            <a class="navbar-link" href="../Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
+            <a class="navbar-link" href="Contact-us/Contactus.html" style="color: white; text-decoration: none; font-family: Arial, Helvetica, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: medium; padding-left: 20px;">
                 Contact Us
             </a>
             <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
